2017-07-01  Julien Bect  <julien.bect@centralesupelec.fr>

	Return a plain numerical array from stk_generate_samplepaths

	* utils/stk_generate_samplepaths.m: Return a plain double
	precision numerical array; no more data frames here.
	* arrays/@stk_dataframe/stk_generate_samplepaths.m: Removed.
	* examples/03_miscellaneous/stk_example_misc04.m: Updated.
	* admin/octpkg/INDEX: Update the INDEX.

	@stk_model_gpposterior/stk_model_gpposterior.m: Check xi

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Check the
	number of columns of input argument xi.

	Move important plotting functions to 'utils' directory

	* misc/plot/stk_plot1d.m: Moved to 'utils' directory.
	* misc/plot/stk_plot_histnormres.m: Idem.
	* misc/plot/stk_plot_predvsobs.m: Idem.
	* utils/stk_plot1d.m: Moved from 'misc/plot' directory.
	* utils/stk_plot_histnormres.m: Idem.
	* utils/stk_plot_predvsobs.m: Idem.

2017-06-29  Julien Bect  <julien.bect@centralesupelec.fr>

	Add a new test case named 'truss3'

	* examples/test_functions/stk_testcase_truss3.m: New function.
	* examples/test_functions/stk_testfun_truss3_bb.m: New function.
	* examples/test_functions/stk_testfun_truss3_vol.m: New function.
	* admin/octpkg/INDEX: Add new functions to the INDEX.

	stk_plot_predvsobs.m: Lowercase labels

	* misc/plot/stk_plot_predvsobs.m: Lowercase labels.

2017-06-28  Julien Bect  <julien.bect@centralesupelec.fr>

	Change mnemonic 'IncorrectArgument' to 'InvalidArgument'

	* arrays/@stk_dataframe/cat.m: Change mnemonic 'IncorrectArgument'
	to 'InvalidArgument', since both of them were used interchangeably.
	* arrays/@stk_dataframe/find.m: Idem.
	* arrays/@stk_factorialdesign/private/plot_surfmeshcontour.m: Idem.
	* misc/dist/stk_gpquadform.m: Idem.
	* misc/pareto/stk_dominatedhv.m: Idem.
	* param/estim/stk_param_estim.m: Idem.
	* param/estim/stk_param_init.m: Idem.
	* sampling/stk_sampling_olhs.m: Idem.
	* sampling/stk_sampling_sobol.m: Idem.

	@stk_dataframe/bsxfun.m: Remove annoying warnings
